[CHORE] 의회식 토론 api 제거 (#172)